--- a/tools.html
+++ b/tools.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Use Unlimited free online tools for text editing, image conversion, SEO analysis, PDF, and more — everything in one place. Fast, secure, and easy to use.">
   <meta name="keywords" content="online tools, all in one tools, free online tools, text tools, image tools, converter tools, SEO tools, PDF tools, website tools, utility tools, coding tools, AI tools, all tools website, productivity tools, free web tools">
-  <meta name="author" content="OnlineGamesB">
-  <title>All in One Free Online Tools | Text, Image, Converter, SEO & More | Online GamesB xyz</title>
+  <meta name="author" content="OnlineGamesBD">
+  <title>All in One Free Online Tools | Text, Image, Converter, SEO & More | Online GamesBD xyz</title>
 <link rel="apple-touch-icon" sizes="180x180" href="/ico/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/ico/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/ico/favicon-16x16.png">
