--- a/privacy-policy2.html
+++ b/privacy-policy2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Onlinegamesb</title>
+    <title>Privacy Policy - Onlinegamesbd</title>
     <style>
         * {
             margin: 0;
@@ -331,7 +331,7 @@
             <h2><span class="section-number">11</span> CONTACT US</h2>
             <p>For privacy questions or requests, contact:</p>
             <p><strong>Email:</strong> <a href="mailto:sabbirkhanmd245@gmail.com">sabbirkhanmd245@gmail.com</a></p>
-            <p><strong>Website:</strong> <a href="https://www.onlinegamesb.xyz">https://www.onlinegamesb.xyz</a></p>
+            <p><strong>Website:</strong> <a href="https://www.onlinegamesbd.xyz">https://www.onlinegamesbd.xyz</a></p>
         </section>
     </div>
 </body>
