--- a/no-ads-game.html
+++ b/no-ads-game.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Play free online and offline games with friends. Enjoy fun mini games and the best free games collection for kids and adults on OnlineGamesB.">
+    <meta name="description" content="Play free online and offline games with friends. Enjoy fun mini games and the best free games collection for kids and adults on OnlineGamesBD.">
   <meta name="keywords" content="games, free games, online games, free online games, offline games, online games to play with friends, best free online games, fun online games, best online games, free online games for kids- no download">
-  <meta name="author" content="OnlineGamesB">
-    <meta name="author" content="onlinegamesb.xyz">
+  <meta name="author" content="OnlineGamesBD">
+    <meta name="author" content="onlinegamesbd.xyz">
     <meta name="theme-color" content="#6366f1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="menu/style.css">
@@ -582,7 +582,7 @@
         <div class="header-content">
             <div class="logo">
                 <i class="fas fa-gamepad"></i>
-                <span>OnlineGamesB</span>
+                <span>OnlineGamesBD</span>
             </div>
             <div class="search-container">
                 <input type="text" class="search-input" placeholder="Search for games...">
@@ -744,7 +744,7 @@ function _0xb58a() {
         'relatedGrid',
         '1058733gNRYOy',
         'error',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'DOMContentLoaded',
         'trim',
         '</h3>\x0a\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20<span\x20class=\x22game-category\x22>',
@@ -761,7 +761,7 @@ function _0xb58a() {
         'flex',
         'textContent',
         'Error\x20loading\x20games\x20from\x20JSON:',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         '\x0a\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20<img\x20src=\x22',
         'getElementById',
         'hostname',
