--- a/blog.html
+++ b/blog.html
@@ -3,27 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OnlineGamesB Blog – Online Games, Tools, Tips & Guides</title>
-<meta name="description" content="OnlineGamesB Blog provides online game updates, gaming tips, HTML5 tools, guides, and tutorials. Explore 200000+ free games and tools.">
-<meta name="keywords" content="online games blog, gaming tips, html5 games, free tools, game guides, onlinegamesb blog">
+    <title>OnlineGamesBD Blog – Online Games, Tools, Tips & Guides</title>
+<meta name="description" content="OnlineGamesBD Blog provides online game updates, gaming tips, HTML5 tools, guides, and tutorials. Explore 20000+ free games and tools.">
+<meta name="keywords" content="online games blog, gaming tips, html5 games, free tools, game guides, onlinegamesbd blog">
     
-    <meta property="og:title" content="OnlineGamesB Blog – Latest Game Guides & Tools">
-<meta property="og:description" content="Explore 200000+ online games, tools, guides, and gaming tips on OnlineGamesB Blog.">
-<meta property="og:image" content="https://onlinegamesb.xyz/icon/icon-512.png">
-<meta property="og:url" content="https://onlinegamesb.xyz/blog">
+    <meta property="og:title" content="OnlineGamesBD Blog – Latest Game Guides & Tools">
+<meta property="og:description" content="Explore 200000+ online games, tools, guides, and gaming tips on OnlineGamesBD Blog.">
+<meta property="og:image" content="https://onlinegamesbd.xyz/icon/icon-512.png">
+<meta property="og:url" content="https://onlinegamesbd.xyz/blog">
 <meta property="og:type" content="article">
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="OnlineGamesB Blog – Game Guides & Tools">
-<meta name="twitter:description" content="OnlineGamesB Blog features gaming updates, HTML5 tools, tips, and tutorials.">
-<meta name="twitter:image" content="https://onlinegamesb.xyz/icon/icon-512.png">
+<meta name="twitter:title" content="OnlineGamesBD Blog – Game Guides & Tools">
+<meta name="twitter:description" content="OnlineGamesBD Blog features gaming updates, HTML5 tools, tips, and tutorials.">
+<meta name="twitter:image" content="https://onlinegamesbd.xyz/icon/icon-512.png">
 <script type="application/ld+json">
 {
  "@context": "https://schema.org",
  "@type": "Organization",
- "name": "OnlineGamesB",
- "url": "https://onlinegamesb.xyz",
- "logo": "https://onlinegamesb.xyz/icon/icon-512.png",
- "description": "OnlineGamesB is a free online gaming and tools platform offering 200+ HTML5 games and 50+ online tools.",
+ "name": "OnlineGamesBD",
+ "url": "https://onlinegamesbd.xyz",
+ "logo": "https://onlinegamesbd.xyz/icon/icon-512.png",
+ "description": "OnlineGamesBD is a free online gaming and tools platform offering 200+ HTML5 games and 50+ online tools.",
  "sameAs": [
    "https://facebook.com/onlinegamesb",
    "https://youtube.com/@onlinegamesb"
@@ -33,9 +33,9 @@
 {
  "@context": "https://schema.org",
  "@type": "WebPage",
- "name": "OnlineGamesB Blog",
- "url": "https://onlinegamesb.xyz/blog",
- "description": "OnlineGamesB Blog – Articles about online games, HTML5 tools, updates, guides, and gaming tutorials."
+ "name": "OnlineGamesBD Blog",
+ "url": "https://onlinegamesbd.xyz/blog",
+ "description": "OnlineGamesBD Blog – Articles about online games, HTML5 tools, updates, guides, and gaming tutorials."
 }
 <script type="application/ld+json">
 {
@@ -43,14 +43,14 @@
  "@type": "FAQPage",
  "mainEntity": [{
    "@type": "Question",
-   "name": "What is the OnlineGamesB Blog?",
+   "name": "What is the OnlineGamesBD Blog?",
    "acceptedAnswer": {
      "@type": "Answer",
-     "text": "OnlineGamesB Blog is a section where we publish articles about online games, tools, gaming tips, updates, and guides."
+     "text": "OnlineGamesBD Blog is a section where we publish articles about online games, tools, gaming tips, updates, and guides."
    }
  }, {
    "@type": "Question",
-   "name": "What type of content is available on OnlineGamesB Blog?",
+   "name": "What type of content is available on OnlineGamesBD Blog?",
    "acceptedAnswer": {
      "@type": "Answer",
      "text": "The blog covers HTML5 games, online tools, game tutorials, gaming tricks, latest updates, and platform news."
@@ -88,7 +88,7 @@
 
 <div class="iframe-wrapper">
   <iframe 
-    src="https://blog.onlinegamesb.xyz/"
+    src="https://blog.onlinegamesbd.xyz/"
     loading="lazy"
     allowfullscreen>
   </iframe>
