--- a/all-game.html
+++ b/all-game.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Play free online and offline games with friends. Enjoy fun mini games and the best free games collection for kids and adults on OnlineGamesB.">
+    <meta name="description" content="Play free online and offline games with friends. Enjoy fun mini games and the best free games collection for kids and adults on OnlineGamesBD.">
   <meta name="keywords" content="games, free games, online games, free online games, offline games, online games to play with friends, best free online games, fun online games, best online games, free online games for kids- no download">
-  <meta name="author" content="OnlineGamesB">
-    <meta name="author" content="onlinegamesb.xyz">
+  <meta name="author" content="OnlineGamesBD">
+    <meta name="author" content="onlinegamesbd.xyz">
     <meta name="theme-color" content="#6366f1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="menu/style.css">
@@ -570,7 +570,7 @@
         <div class="header-content">
             <div class="logo">
                 <i class="fas fa-gamepad"></i>
-                <span>OnlineGamesB</span>
+                <span>OnlineGamesBD</span>
             </div>
             <div class="search-container">
                 <input type="text" class="search-input" placeholder="Search for games...">
@@ -826,7 +826,7 @@ function _0x1c8d() {
         'trim',
         'body',
         'fullscreenchange',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         '\x22>\x0a\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20<i\x20class=\x22fas\x20fa-play\x22></i>\x0a\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20Play\x20Now\x0a\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20</button>\x0a\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20</div>\x0a\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20',
         'title',
         'exitFullscreen',
@@ -871,7 +871,7 @@ function _0x1c8d() {
         'none',
         '\x22\x20class=\x22related-thumb\x22>\x0a\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20<div\x20class=\x22related-info\x22>\x0a\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20<h4\x20class=\x22related-name\x22>',
         'description',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'webkitFullscreenElement',
         'toLowerCase',
         'Error\x20loading\x20games:',
