--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About us - onlinegamesb.xyz</title>
+    <title>About us - onlinegamesbd.xyz</title>
 <link rel="apple-touch-icon" sizes="180x180" href="/ico/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/ico/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/ico/favicon-16x16.png">
@@ -500,7 +500,7 @@
     <div class="cta">
         <h2>Join Us Today!</h2>
         <p>Join the community of thousands of gamers and start your gaming journey</p>
-        <a href="https://onlinegamesb.xyz" class="cta-button">Game play</a>
+        <a href="https://onlinegamesbd.xyz" class="cta-button">Game play</a>
     </div>
 </div>
 
