--- a/about-2.html
+++ b/about-2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - OnlineGamesB</title>
+    <title>About Us - OnlineGamesBD</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -246,7 +246,7 @@
 <body>
     <header>
         <div class="container">
-            <div class="logo">OnlineGamesB</div>
+            <div class="logo">OnlineGamesBD</div>
             <p class="tagline">Your all-in-one platform for gaming, tools, and digital solutions</p>
             <a href="#contact" class="btn">Get In Touch</a>
         </div>
@@ -256,7 +256,7 @@
         <div class="container">
             <h2 class="section-title">About Us</h2>
             <div class="intro">
-                <p>OnlineGamesB is a modern all-in-one platform designed to bring together online gaming, useful tools, and daily digital solutions in one convenient place. Our mission is to deliver a fast, secure, and user-friendly experience for everyone—whether you're here to play games, use productivity tools, or explore helpful content.</p>
+                <p>OnlineGamesBD is a modern all-in-one platform designed to bring together online gaming, useful tools, and daily digital solutions in one convenient place. Our mission is to deliver a fast, secure, and user-friendly experience for everyone—whether you're here to play games, use productivity tools, or explore helpful content.</p>
                 <p>We offer a wide variety of HTML5 games and online tools that work smoothly on all devices, without the need for downloads or installations. Our platform is updated regularly to ensure users always get fresh content and an improved experience.</p>
             </div>
         </div>
@@ -374,15 +374,15 @@
     <section class="contact-section" id="contact">
         <div class="container">
             <h2 class="section-title">Get In Touch</h2>
-            <p class="contact-text">OnlineGamesB is growing every day, and your feedback helps us improve. If you have ideas, suggestions, or issues, feel free to reach out. We're always here to help and make your experience even better.</p>
+            <p class="contact-text">OnlineGamesBD is growing every day, and your feedback helps us improve. If you have ideas, suggestions, or issues, feel free to reach out. We're always here to help and make your experience even better.</p>
             <a href="mailto:sabbirkhanmd245@gmail.com" class="btn">Contact Us</a>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 OnlineGamesB. All rights reserved.</p>
-            <p>onlinegamesb.xyz - Your all-in-one platform for gaming and tools</p>
+            <p>&copy; 2023 OnlineGamesBD. All rights reserved.</p>
+            <p>onlinegamesbd.xyz - Your all-in-one platform for gaming and tools</p>
         </div>
     </footer>
 </body>
