--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <header class="header">
             <div class="container">
                 <div class="header-content">
-                    <h1 class="logo">🎮 Online GamesB.xyz</h1>
+                    <h1 class="logo">🎮 Online GamesBD.xyz</h1>
                     <div class="header-actions">
                         <button id="theme-toggle" class="btn-icon" title="Toggle Theme">
                             <svg id="theme-icon-sun" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
