--- a/tool-1/Age Calculator 8/index.html
+++ b/tool-1/Age Calculator 8/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Calculate your exact age in years, months, and days with our free Age Calculator tool. Works online and offline to help you find your birth age quickly and accurately.">
 <meta name="keywords" content="age calculator, calculate age, date of birth calculator, birthday calculator, online age calculator, offline age calculator, age finder, age counter, DOB calculator, exact age in years months days">
-<meta name="author" content="OnlineGamesB">
-<title>Age Calculator - Calculate Your Exact Age Online & Offline | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Age Calculator - Calculate Your Exact Age Online & Offline | OnlineGamesBD</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <link rel="stylesheet" href="/menu/footer.css">
     <style>
@@ -282,8 +282,8 @@
         </div>
         
         <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
     </div>
 
@@ -359,7 +359,7 @@ function _0x3f61() {
         'click',
         'style',
         'getElementById',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'innerHTML',
         'getFullYear',
         'display',
@@ -397,7 +397,7 @@ function _0x3f61() {
         'location',
         'month',
         'querySelectorAll',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'getDate',
         'value',
         'setAttribute',
