--- a/tool-1/Calculator 14/index.html
+++ b/tool-1/Calculator 14/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="A modern, feature-rich calculator with SEO optimization. Perform basic arithmetic operations with a sleek design.">
     <meta name="keywords" content="calculator, math tool, arithmetic, online calculator, web calculator">
     <meta name="author" content="Web Calculator Pro">
-    <title>Modern Calculator | Online & Offline | OnlineGamesB</title>
+    <title>Modern Calculator | Online & Offline | OnlineGamesBD</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/menu/footer.css">
     <style>
@@ -336,8 +336,8 @@ img { pointer-events: none; } /* stops long-press on some devices */
     </div>
     
     <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
 
     <script>
@@ -359,7 +359,7 @@ function _0x48ab() {
         '56216Sbibwx',
         '<h2\x20style=\x27color:red;\x20text-align:center;\x20margin-top:50px;\x27>To\x20launch\x20your\x20website,\x20contact\x20this\x20email\x20sabbirkhanmd245@gmail.com</h2>',
         'click',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'slice',
         '6176997rtmSNz',
         'operation',
@@ -549,7 +549,7 @@ document[_0x521e68(0xda)](_0x521e68(0xd6))[_0x521e68(0xd9)](_0x53181f => {
     }
 });
 const allowedDomains = [
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'localhost',
         _0x521e68(0xca)
     ], currentHost = window[_0x521e68(0xc1)]['hostname'];
