--- a/tool-1/Case Converter Uppercase Lowercase 4/index.html
+++ b/tool-1/Case Converter Uppercase Lowercase 4/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Convert text to uppercase, lowercase, or proper case instantly with our free Case Converter tool. Works online and offline to help writers, students, and professionals format text easily.">
 <meta name="keywords" content="case converter, uppercase converter, lowercase converter, proper case converter, text case changer, online case converter, offline case converter, text formatting tool, convert text online, free case converter">
-<meta name="author" content="OnlineGamesB">
-<title>Case Converter - Uppercase & Lowercase Text Tool | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Case Converter - Uppercase & Lowercase Text Tool | OnlineGamesBD</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/menu/footer.css">
     <style>
@@ -252,8 +252,8 @@
         </div>
         
         <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
     </div>
 
@@ -286,7 +286,7 @@ function _0x1f2b() {
         'execCommand',
         'titleCaseBtn',
         'includes',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'hostname',
         'value',
         '1076402XYGmpo',
@@ -297,7 +297,7 @@ function _0x1f2b() {
         'split',
         '28egTJIw',
         '133bZWVfc',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'upperCaseBtn',
         'click',
         'inputText',
