--- a/tool-1/Character Counter 3/index.html
+++ b/tool-1/Character Counter 3/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Count characters instantly with our free Character Counter tool. Works online and offline to help writers, students, and social media users track character limits easily. Perfect for tweets, essays, and posts.">
 <meta name="keywords" content="character counter, character count, online character counter, offline character counter, free character counter, text length checker, twitter character counter, instagram caption counter, writing tool, count characters online">
-<meta name="author" content="OnlineGamesB">
-<title>Character Counter - Count Characters Online & Offline | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Character Counter - Count Characters Online & Offline | OnlineGamesBD</title>
 <link rel="stylesheet" href="/menu/footer.css">
     <style>
         * {
@@ -276,8 +276,8 @@
         </div>
         
         <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
     </div>
     
@@ -333,7 +333,7 @@ function _0x5532() {
         'includes',
         'getElementById',
         'linear-gradient(90deg,\x20#ff416c,\x20#ff4b2b)',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'replace',
         '20506221FoGFYj',
         'This\x20game\x20is\x20not\x20allowed\x20to\x20run\x20on\x20this\x20domain!',
@@ -388,7 +388,7 @@ function _0x5532() {
 const allowedDomains = [
         _0x770f80(0xd4),
         _0x770f80(0xcb),
-        'onlinegamesb.xyz'
+        'onlinegamesbd.xyz'
     ], currentHost = window[_0x770f80(0xd9)][_0x770f80(0xe1)];
 if (!allowedDomains[_0x770f80(0xd1)](currentHost)) {
     document['body'][_0x770f80(0xf5)] = _0x770f80(0xe9);
