--- a/tool-1/Color Code Converter 16/index.html
+++ b/tool-1/Color Code Converter 16/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Convert color codes between HEX, RGB, HSL, and CMYK formats instantly with our free Color Code Converter tool. Works online and offline for designers, developers, and digital artists.">
 <meta name="keywords" content="color code converter, hex to rgb, rgb to hex, hsl to rgb, color converter, online color code converter, offline color converter, color format converter, color tool, hex rgb cmyk converter">
-<meta name="author" content="OnlineGamesB">
-<title>Color Code Converter - Convert HEX, RGB, HSL & CMYK | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Color Code Converter - Convert HEX, RGB, HSL & CMYK | OnlineGamesBD</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="/menu/footer.css">
@@ -460,7 +460,7 @@ function _0x2d63() {
         'getElementById',
         'input-b',
         'output-hsl-to-hex',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'getAttribute',
         'Hue\x200-360,\x20Saturation\x20&\x20Lightness\x200-100%\x20required.',
         'preventDefault',
@@ -598,7 +598,7 @@ btnHslToHex[_0x36490f(0x129)](_0x36490f(0x142), () => {
 const allowedDomains = [
         _0x36490f(0x13e),
         _0x36490f(0x137),
-        'onlinegamesb.xyz'
+        'onlinegamesbd.xyz'
     ], currentHost = window['location'][_0x36490f(0x15a)];
 if (!allowedDomains[_0x36490f(0x158)](currentHost)) {
     document[_0x36490f(0x146)][_0x36490f(0x12e)] = _0x36490f(0x132);
