--- a/tool-1/Days Between Dates Calculator 26/index.html
+++ b/tool-1/Days Between Dates Calculator 26/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description" content="Calculate the number of days between two dates instantly with our free Days Between Dates Calculator. Simple, accurate, and works offline too.">
 <meta name="keywords" content="days between dates calculator, date difference calculator, days calculator, date duration, how many days between, time calculator, date gap finder, calendar days count, offline date calculator, days counter">
-<meta name="author" content="OnlineGamesB">
-<title>Days Between Dates Calculator - Find Date Difference Easily | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Days Between Dates Calculator - Find Date Difference Easily | OnlineGamesBD</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="/menu/footer.css">
     <style>
@@ -241,8 +241,8 @@
         </div>
         
         <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
     </div>
 
@@ -313,13 +313,13 @@ if (!allowedDomains[_0x6537ab(0x141)](currentHost)) {
 function _0x17d2() {
     const _0x1bdb70 = [
         '5207440TiyGYU',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'DOMContentLoaded',
         '477LHHhgN',
         'classList',
         'This\x20game\x20is\x20not\x20allowed\x20to\x20run\x20on\x20this\x20domain!',
         '5509420AWMdCf',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'max',
         'change',
         'textContent',
