--- a/tool-1/EXIF data viewer 50/index.html
+++ b/tool-1/EXIF data viewer 50/index.html
@@ -71,8 +71,8 @@
         </footer>
         
         <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
     </div>
 
@@ -90,7 +90,7 @@
         "@type": "WebApplication",
         "name": "EXIF Data Viewer",
         "description": "Free online tool to extract EXIF metadata from images and view GPS locations on OpenStreetMap",
-        "url": "localhost:8080/EXIF data viewer/index.html",
+        "url": "onlinegamesbd.xyz/EXIF data viewer/",
         "applicationCategory": "MultimediaApplication",
         "operatingSystem": "Any",
         "permissions": "browser",
