--- a/tool-1/Emoji Combiner 42/index.html
+++ b/tool-1/Emoji Combiner 42/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta name="description" content="Combine two or more emojis into one unique emoji with our free Emoji Combiner tool. Fun, creative, and works offline — perfect for chats, memes, and social media.">
 <meta name="keywords" content="emoji combiner, emoji mixer, emoji creator, emoji generator, mix emojis, combine emojis, emoji art, custom emoji, fun emoji tool, offline emoji maker">
-<meta name="author" content="OnlineGamesB">
-<title>Emoji Combiner - Mix & Create Custom Emojis Online | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Emoji Combiner - Mix & Create Custom Emojis Online | OnlineGamesBD</title>
     <style>
         * {
             margin: 0;
@@ -1633,7 +1633,7 @@ function _0x1bd9() {
         'forEach',
         'style',
         '-9999px',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'textContent',
         '🛍️',
         '250px',
@@ -1653,7 +1653,7 @@ function _0x1bd9() {
         'fontSize',
         'add',
         '🎛️',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'span',
         'alignItems',
         'y-position',
