--- a/tool-1/Friendship Calculator 46/index.html
+++ b/tool-1/Friendship Calculator 46/index.html
@@ -347,7 +347,7 @@ if (!allowedDomains[_0x20b44c(0x16f)](currentHost)) {
 function _0x34f9() {
     const _0x353a9b = [
         'remove',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'DOMContentLoaded',
         'div',
         'click',
@@ -357,7 +357,7 @@ function _0x34f9() {
         '4161576bdBHBs',
         'confetti',
         'focus',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'includes',
         '\x20have\x20an\x20amazing\x20connection!\x20Keep\x20nurturing\x20this\x20special\x20bond.',
         '🤝\x20💭\x20🌱',
