--- a/tool-1/Funny Nickname  Crush Name Combiner 47/index.html
+++ b/tool-1/Funny Nickname  Crush Name Combiner 47/index.html
@@ -201,8 +201,8 @@
             <p class="text-gray-500 text-sm"> Double Fun Generators. All nicknames are randomly generated for entertainment purposes.</p>
         </footer>
         <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
     </div>
 
@@ -447,7 +447,7 @@ function _0x5117() {
         'bounce',
         'crush-name',
         'Zany',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'Yak',
         'Please\x20enter\x20both\x20names!',
         'classList',
@@ -508,7 +508,7 @@ function _0x5117() {
         'Hungry',
         'children',
         '2992808qEyjUX',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'Jolly',
         'Lil\x20{firstInitial}{secondInitial}',
         'textContent',
