--- a/tool-1/Loan Calculator 10/index.html
+++ b/tool-1/Loan Calculator 10/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Calculate your monthly loan payments, interest rate, and total amount easily with our free Loan Calculator tool. Works online and offline to help you manage personal, car, or home loans accurately.">
 <meta name="keywords" content="loan calculator, emi calculator, interest calculator, mortgage calculator, personal loan calculator, car loan calculator, home loan calculator, online loan calculator, offline loan calculator, loan payment tool">
-<meta name="author" content="OnlineGamesB">
-<title>Loan Calculator - Calculate EMI & Interest Online & Offline | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Loan Calculator - Calculate EMI & Interest Online & Offline | OnlineGamesBD</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/menu/footer.css">
     <style>
@@ -462,7 +462,7 @@ function _0x3d83() {
         '6cRjFte',
         'value',
         'body',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'totalInterest',
         'totalPayment',
         '592044iFYIPE',
@@ -518,7 +518,7 @@ function generateAmortizationSchedule(_0x5b3226, _0x480984, _0x794117, _0x228f82
     amortizationBody['innerHTML'] = _0x4e9df7;
 }
 const allowedDomains = [
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'localhost',
         _0x358e09(0x147)
     ], currentHost = window[_0x358e09(0x159)][_0x358e09(0x138)];
