--- a/tool-1/Lucky Number  Mood Detector 48/index.html
+++ b/tool-1/Lucky Number  Mood Detector 48/index.html
@@ -226,8 +226,8 @@
             <p>Note: This is just for fun and entertainment purposes. Results are randomly generated.</p>
         </footer>
         <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
     </div>
 
@@ -356,7 +356,7 @@ function _0x592e() {
         '175bRsliv',
         '126VUnvce',
         'Creative',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'Playful',
         '#28a745',
         '44mkrbRj',
@@ -369,7 +369,7 @@ function _0x592e() {
         '#6f42c1',
         'innerHTML',
         'Tackle\x20challenges\x20with\x20enthusiasm!',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'click',
         'addEventListener',
         'random',
