--- a/tool-1/Number to Word converter 7/index.html
+++ b/tool-1/Number to Word converter 7/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Convert any number into words instantly with our free Number to Word Converter tool. Works online and offline to help students, accountants, and professionals write numbers in words easily.">
 <meta name="keywords" content="number to word converter, convert number to words, number in words, amount to words, online number converter, offline number converter, numeric to text, number to english words, number spelling tool, free converter">
-<meta name="author" content="OnlineGamesB">
-<title>Number to Word Converter - Convert Numbers into Words | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Number to Word Converter - Convert Numbers into Words | OnlineGamesBD</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/menu/footer.css">
     <style>
@@ -242,8 +242,8 @@
         </div>
         
         <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
     </div>
     
@@ -377,7 +377,7 @@ function _0x38c3() {
         'This\x20game\x20is\x20not\x20allowed\x20to\x20run\x20on\x20this\x20domain!',
         'thousand',
         '20pCWpYE',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'Enter',
         '25224PPSdqf',
         '92ZRPiqU',
@@ -396,7 +396,7 @@ function _0x38c3() {
         'eight',
         'nineteen',
         'color',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'forty',
         'four',
         '8348580SCvxrL',
