--- a/tool-1/Online Stopwatch 17/index.html
+++ b/tool-1/Online Stopwatch 17/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Track time precisely with our free Digital Stopwatch tool. Works online and offline to help you measure time intervals for workouts, games, studies, and daily activities with accuracy.">
 <meta name="keywords" content="digital stopwatch, stopwatch online, stopwatch offline, free stopwatch, online timer, time tracker, digital timer, stopwatch for workout, stopwatch for study, stopwatch tool">
-<meta name="author" content="OnlineGamesB">
-<title>Digital Stopwatch - Free Online & Offline Timer | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Digital Stopwatch - Free Online & Offline Timer | OnlineGamesBD</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/menu/footer.css">
     <style>
@@ -281,8 +281,8 @@
         </div>
         
         <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
     </div>
 
@@ -339,7 +339,7 @@ function _0x434c() {
         'now',
         'floor',
         '4bKgIwx',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'This\x20game\x20is\x20not\x20allowed\x20to\x20run\x20on\x20this\x20domain!',
         'lapList',
         'localhost',
@@ -392,7 +392,7 @@ function _0x41af(_0x1d8411, _0x1ad3e7) {
 }
 startBtn[_0x5934b9(0x104)](_0x5934b9(0xfd), startTimer), pauseBtn[_0x5934b9(0x104)](_0x5934b9(0xfd), pauseTimer), lapBtn[_0x5934b9(0x104)]('click', recordLap), resetBtn['addEventListener'](_0x5934b9(0xfd), resetTimer), pauseBtn[_0x5934b9(0xe7)] = !![];
 const allowedDomains = [
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         _0x5934b9(0xef),
         _0x5934b9(0xec)
     ], currentHost = window[_0x5934b9(0x10c)][_0x5934b9(0x10a)];
