--- a/tool-1/Password Generator 5/index.html
+++ b/tool-1/Password Generator 5/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Generate strong, secure passwords instantly with our free Password Generator tool. Works online and offline to help protect your accounts with random, unique, and uncrackable passwords.">
 <meta name="keywords" content="password generator, strong password generator, secure password, random password generator, offline password generator, online password generator, create password, generate password, safe password tool, password maker">
-<meta name="author" content="OnlineGamesB">
-<title>Password Generator - Create Strong & Secure Passwords | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Password Generator - Create Strong & Secure Passwords | OnlineGamesBD</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <style>
@@ -383,7 +383,7 @@ function _0x33fd() {
         'hostname',
         '#ffc107',
         '!@#$%^&*()_+~`|}{[]:;?><,./-=',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'change',
         'load',
         '1377QHTfsA',
@@ -476,7 +476,7 @@ generateBtn[_0x438482(0x1c6)]('click', generatePassword), copyBtn['addEventListe
     _0x210cab[_0x380d65(0x1c6)](_0x380d65(0x1da), updateStrengthMeter);
 });
 const allowedDomains = [
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         _0x438482(0x1b3),
         _0x438482(0x1d9)
     ], currentHost = window[_0x438482(0x1dd)][_0x438482(0x1d6)];
