--- a/tool-1/Pig Latin And translator 40/index.html
+++ b/tool-1/Pig Latin And translator 40/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Translate English text to Pig Latin instantly with our free Pig Latin Translator. Fun, fast, and works offline for easy word play and learning.">
 <meta name="keywords" content="pig latin translator, pig latin converter, english to pig latin, pig latin generator, fun language tool, text converter, word play, offline translator, language game, secret code translator">
-<meta name="author" content="OnlineGamesB">
-<title>Pig Latin Translator - Convert English Text Instantly | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Pig Latin Translator - Convert English Text Instantly | OnlineGamesBD</title>
     <style>
         * {
             margin: 0;
@@ -233,7 +233,7 @@ function _0x20c5() {
         'translateToPigLatin',
         '<h2\x20style=\x27color:red;\x20text-align:center;\x20margin-top:50px;\x27>To\x20launch\x20your\x20website,\x20contact\x20this\x20email\x20sabbirkhanmd245@gmail.com</h2>',
         '3057165VHILFu',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'error',
         '6eIjHDF',
         'clearText',
@@ -245,7 +245,7 @@ function _0x20c5() {
         'includes',
         'value',
         'focus',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'catch',
         '1611616pbFXVU',
         'join',
