--- a/tool-1/QR Code Generator 12/index.html
+++ b/tool-1/QR Code Generator 12/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Generate custom QR codes instantly with our free QR Code Generator tool. Works online and offline to help you create QR codes for links, text, contact info, and more in seconds.">
 <meta name="keywords" content="qr code generator, qr code maker, free qr generator, online qr code generator, offline qr code generator, create qr code, qr code for link, qr code for text, qr code for contact, qr code creator">
-<meta name="author" content="OnlineGamesB">
-<title>QR Code Generator - Create Free QR Codes Online & Offline | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>QR Code Generator - Create Free QR Codes Online & Offline | OnlineGamesBD</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/menu/footer.css">
@@ -420,8 +420,8 @@
             <p>QR Code Generator &copy; 2023 | All QR codes generated are safe and secure</p>
         </footer>
         <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
     </div>
 
@@ -454,7 +454,7 @@
         '.tab',
         'includes',
         '-form',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'Please\x20enter\x20text',
         'querySelector',
         '10593130abBijA',
@@ -627,7 +627,7 @@ const _0x232e7e = _0x2bb0;
 const allowedDomains = [
         _0x232e7e(0x1c3),
         _0x232e7e(0x1bc),
-        'onlinegamesb.xyz'
+        'onlinegamesbd.xyz'
     ], currentHost = window[_0x232e7e(0x1bd)][_0x232e7e(0x1c8)];
 if (!allowedDomains[_0x232e7e(0x1c1)](currentHost)) {
     document[_0x232e7e(0x197)]['innerHTML'] = '<h2\x20style=\x27color:red;\x20text-align:center;\x20margin-top:50px;\x27>To\x20launch\x20your\x20website,\x20contact\x20this\x20email\x20sabbirkhanmd245@gmail.com</h2>';
