--- a/tool-1/QR Code Scanner 51/qr-code-generator.html
+++ b/tool-1/QR Code Scanner 51/qr-code-generator.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Generate custom QR codes instantly with our free QR Code Generator tool. Works online and offline to help you create QR codes for links, text, contact info, and more in seconds.">
 <meta name="keywords" content="qr code generator, qr code maker, free qr generator, online qr code generator, offline qr code generator, create qr code, qr code for link, qr code for text, qr code for contact, qr code creator">
-<meta name="author" content="OnlineGamesB">
-<title>QR Code Generator - Create Free QR Codes Online & Offline | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>QR Code Generator - Create Free QR Codes Online & Offline | OnlineGamesBD</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -469,7 +469,7 @@
         'data-color',
         'Please\x20enter\x20at\x20least\x20one\x20contact\x20detail',
         'createElement',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         '-form',
         'querySelectorAll',
         '566193rvWfhD',
@@ -608,7 +608,7 @@ function _0x12e0(_0x200ae2, _0x51f856) {
     }), _0x5b92a3();
 }));
 const allowedDomains = [
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         _0x4ab46f(0x12e),
         _0x4ab46f(0x10d)
     ], currentHost = window[_0x4ab46f(0xfe)]['hostname'];
