--- a/tool-1/QR Code Scanner 51/image-qr-code-scanner.html
+++ b/tool-1/QR Code Scanner 51/image-qr-code-scanner.html
@@ -6,8 +6,8 @@
   
   <meta name="description" content="Scan any QR code instantly with our free QR Code Scanner. Fast, secure, and works offline using your device camera — no app required!">
 <meta name="keywords" content="qr code scanner, qr reader, scan qr code, offline qr scanner, qr code reader, qr decoder, qr camera scanner, barcode reader, qr tool, qr code detector">
-<meta name="author" content="OnlineGamesB">
-<title>QR Code Scanner - Fast & Secure QR Reader Online | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>QR Code Scanner - Fast & Secure QR Reader Online | OnlineGamesBD</title>
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <style>
@@ -693,7 +693,7 @@ function _0x4fff() {
         'canvas',
         '214257Axloos',
         'location',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         '</span>\x0a\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20<button\x20class=\x22copy-btn\x22\x20aria-label=\x22Copy\x20result\x22\x20title=\x22Copy\x20result\x22\x20tabindex=\x220\x22>\x0a\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20<span\x20class=\x22material-icons\x22>content_copy</span>\x0a\x20\x20\x20\x20\x20\x20\x20\x20\x20\x20</button>\x0a\x20\x20\x20\x20\x20\x20\x20\x20',
         'textContent',
         'code_128',
@@ -723,7 +723,7 @@ function _0x4fff() {
         'length',
         'hostname',
         'createElement',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'setAttribute',
         'imageScannerHistory',
         'open',
