--- a/tool-1/QR Code Scanner 51/index.html
+++ b/tool-1/QR Code Scanner 51/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
  <meta name="description" content="Scan any QR code instantly with our free QR Code Scanner. Fast, secure, and works offline using your device camera — no app required!">
 <meta name="keywords" content="qr code scanner, qr reader, scan qr code, offline qr scanner, qr code reader, qr decoder, qr camera scanner, barcode reader, qr tool, qr code detector">
-<meta name="author" content="OnlineGamesB">
-<title>QR Code Scanner - Fast & Secure QR Reader Online | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>QR Code Scanner - Fast & Secure QR Reader Online | OnlineGamesBD</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
     * {
@@ -431,7 +431,7 @@ copyBtn[_0x15b36d(0x1b0)] = () => {
 };
 function _0x362a() {
     const _0x3d66fe = [
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'start-btn',
         'copyBtn',
         'remove',
@@ -494,7 +494,7 @@ function _0x362a() {
         'classList',
         'resultContainer',
         'statusMessage',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'onclick'
     ];
     _0x362a = function () {
