--- a/tool-1/Random Funny Quote Generator 43/index.html
+++ b/tool-1/Random Funny Quote Generator 43/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description" content="Get a random funny quote every time with our free Random Funny Quote Generator. Laugh out loud with hilarious quotes, jokes, and witty lines — works offline too!">
 <meta name="keywords" content="funny quote generator, random funny quotes, joke generator, humor quotes, random quotes, laugh quotes, witty lines, offline quote tool, daily quotes, meme quotes">
-<meta name="author" content="OnlineGamesB">
-<title>Random Funny Quote Generator - Get Hilarious Quotes Instantly | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Random Funny Quote Generator - Get Hilarious Quotes Instantly | OnlineGamesBD</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .fade-scale {
