--- a/tool-1/Random Number Generator 24/index.html
+++ b/tool-1/Random Number Generator 24/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Generate random numbers instantly with our free Random Number Generator tool. Works online and offline to help you pick lottery numbers, create samples, or make quick random selections easily.">
 <meta name="keywords" content="random number generator, number picker, randomizer, online random number generator, offline random number generator, lottery number generator, random selection tool, number generator, random tool, rng tool">
-<meta name="author" content="OnlineGamesB">
-<title>Random Number Generator - Create Random Numbers Online & Offline | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Random Number Generator - Create Random Numbers Online & Offline | OnlineGamesBD</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/menu/footer.css">
     <style>
@@ -249,8 +249,8 @@
         </div>
         
        <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
     </div>
 
@@ -290,7 +290,7 @@ function _0x2bd0() {
         '35xPQpoT',
         'keypress',
         'location',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'remove',
         'body',
         'max-value',
@@ -303,7 +303,7 @@ function _0x2bd0() {
         'toLocaleTimeString',
         '6shuuDR',
         '1499845gFbOzs',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'div',
         'DOMContentLoaded',
         '2GVGAOI',
