--- a/tool-1/Text Glitch Effect generator 36/index.html
+++ b/tool-1/Text Glitch Effect generator 36/index.html
@@ -685,9 +685,9 @@ function _0x9395(_0x34df8f, _0x5aaeec) {
     }
 }(_0x1780, 0xe2538));
 const allowedDomains = [
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         _0x557a76(0x14f),
-        'onlinegamesb.xyz'
+        'onlinegamesbd.xyz'
     ], currentHost = window[_0x557a76(0x156)][_0x557a76(0x159)];
 if (!allowedDomains['includes'](currentHost)) {
     document['body'][_0x557a76(0x150)] = '<h2\x20style=\x27color:red;\x20text-align:center;\x20margin-top:50px;\x27>To\x20launch\x20your\x20website,\x20contact\x20this\x20email\x20sabbirkhanmd245@gmail.com</h2>';
