--- a/tool-1/Text Repeater 6/index.html
+++ b/tool-1/Text Repeater 6/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Repeat any text or word multiple times instantly with our free Text Repeater tool. Works online and offline to help you create repeated messages, fun texts, or testing content easily.">
 <meta name="keywords" content="text repeater, text repeater tool, repeat text online, repeat text offline, text generator, repeat words, message repeater, word repeater, spam text generator, text repetition tool">
-<meta name="author" content="OnlineGamesB">
-<title>Text Repeater - Repeat Text Online & Offline | OnlineGamesB</title>
+<meta name="author" content="OnlineGamesBD">
+<title>Text Repeater - Repeat Text Online & Offline | OnlineGamesBD</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/menu/footer.css">
     <style>
@@ -295,8 +295,8 @@
         </div>
         
         <footer class="site-footer">
-  <p>© <span id="year"></span> <strong>onlinegamesb.xyz</strong>. All rights reserved.</p>
-  <p>Crafted with ❤️ by <a href="https://onlinegamesb.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
+  <p>© <span id="year"></span> <strong>onlinegamesbd.xyz</strong>. All rights reserved.</p>
+  <p>Crafted with ❤️ by <a href="https://onlinegamesbd.xyz" target="_blank">Sabbir</a> | Your ultimate hub for Games & Tools</p>
 </footer>
     </div>
     
@@ -329,7 +329,7 @@ function _0x3881() {
         '3768471DMBkfO',
         'trim',
         'length',
-        'www.onlinegamesb.xyz',
+        'www.onlinegamesbd.xyz',
         'output',
         'input-text',
         'focus',
@@ -355,7 +355,7 @@ function _0x3881() {
         'DOMContentLoaded',
         'Output\x20is\x20empty!',
         'ctrlKey',
-        'onlinegamesb.xyz',
+        'onlinegamesbd.xyz',
         'copy',
         'getElementById',
         'separator-type',
